try to change response ajax

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
             <script type="text/javascript" src='{{ asset('js/interne/filtreMonth.js') }}'></script>
         {% endblock %}
     </head>
-    <body>
+    <body class='body'>
         {% block body %}
             <img src="{{ asset('./images/pdf.jpg') }}" alt='pdf' />
         {% endblock %}
