--- a/templates/client/modal/modal.html.twig
+++ b/templates/client/modal/modal.html.twig
@@ -1,6 +1,6 @@
 <div class="modal modal-client fade" id="cardClient{{client.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog client">
-    <div class="modal-content mt-10">
+    <div class="modal-content mt-5">
       <div class="modal-header">
         <h4 class="modal-title fs-s" id="staticBackdropLabel">{{ client.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr')}}</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -57,9 +57,9 @@
                     <h4 class="modal-title  fs-s" id="staticBackdropLabel">Statut de l'appreil</h4>
                   </div>
                   <div class="card-body">
-                    <span class="badge" style="font-size:16px"> {{ client.appareil.editeur.etat.statut}} </span>
-                    <p class="card-text"><b>Dérniere modificaion : </b>{{ client.appareil.editeur.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr')}}</p>
-                    <p class="card-text"><b>Par : </b>{{client.appareil.editeur.user.login}}</p>
+                    <span class="badge change-etat"  id='test' style="font-size:16px"> {{ client.appareil.editeur.etat.statut}} </span>
+                    <p class="card-text change-date"><b>Dérniere modificaion : </b>{{ client.appareil.editeur.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr')}}</p>
+                    <p class="card-text change-user"><b>Par : </b>{{client.appareil.editeur.user.login}}</p>
                     {{include('client/etat/etat_modal.html.twig') }}
                   </div>
                 </div>
