--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -56,7 +56,7 @@
                         {% endif %}
                         {% if client.appareil.editeur.etat.statut is defined %}
                             <td class='statutAppareil'> 
-                                <span class="badge" style="font-size:16px"> {{ client.appareil.editeur.etat.statut}} </span>
+                                <span class="badge" id='change-statut{{client.id}}' style="font-size:16px"> {{ client.appareil.editeur.etat.statut}} </span>
                             </td>
                         {% else %}
                         <td>  </td>
