try to send email wherer appel form is send

--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -12,7 +12,7 @@
             <table class="table">
                 <thead>
                     <tr class='table_head'>
-                        <th style="min-with : 80px !important">Date</th>
+                        <th>Date</th>
                         <th>Civilité</th>
                         <th>Nom</th>
                         <th>Prenom</th>
