--- a/templates/appel/_form.html.twig
+++ b/templates/appel/_form.html.twig
@@ -16,7 +16,7 @@
         </div>
 		<div class="form-field ">
 			{{form_widget(form.mail , {'attr': {  'class' : 'form-control rounded-1 required', 'id':'tel' } })}}
-			<label for="tel">Mail</label>
+			<label for="tel">Mail *</label>
 		</div>
 	</div>
     <div class="grix">
