--- a/templates/emails/appel/mail_rappel.html.twig
+++ b/templates/emails/appel/mail_rappel.html.twig
@@ -1,10 +1,13 @@
 <h1>Dépot chez AZERTY Solutions Informatiques</h1>
-<p>Bonjour,{{nom}} {{prenom}} </p>
+<p>Bonjour {{nom}} {{prenom}}, </p>
 <p>
+Nous accusons réception de votre demande de rappel à la date suivante Date.
 </p>
-
+<p> 
+    Nous vous contacterons dans les plus brefs délais, surveillez votre téléphone, il se peut qu’on vous appelle avec un numéro masqué.
+</p>
 <h3> Rappel de votre demande </h3>
 <p>{{objet}}</p>
-<p>{{message}}}}</p>
+<p>{{message}}</p>
 
 {% include 'emails/layout/footer.html.twig' %}
