--- a/templates/emails/layout/footer.html.twig
+++ b/templates/emails/layout/footer.html.twig
@@ -1,4 +1,7 @@
 <p>
+    L'équipe d'AZERTY Solutions Informatiques vous remercie de votre confiance.
+</p>
+<p>
     --------------------------------
 </p>
 <p>
