--- a/public/css/interne/appel/index.css
+++ b/public/css/interne/appel/index.css
@@ -20,3 +20,9 @@
     width: 30px;
     height: 30px;
 }
+.btn-warning .bi-telephone-x-fill{
+    font-size: 17px;
+}
+.mr-1{
+    margin-right: 1px;
+}
