--- a/templates/appel/_dont_reply_form.html.twig
+++ b/templates/appel/_dont_reply_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_appel_no_reply', {'id': appel.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ appel.id) }}">
-    <button class="btn btn-danger"><img width="20px" class="delete" src="{{asset('./images/icon-delete.png')}}"/></button>
+<form method="post" class="mr-1" action="{{ path('app_appel_no_reply', {'id': appel.id}) }}" onsubmit="return confirm('Vous avez appelez ce client et il n'as pa repondu ?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('noreply' ~ appel.id) }}">
+    <button class="btn btn-dark"><i class="bi bi-telephone-x-fill"></i></button>
 </form>
