resolved prblm css in edit client

--- a/templates/client/_form.html.twig
+++ b/templates/client/_form.html.twig
@@ -94,7 +94,7 @@
 </div>
 <div class="mb-3 text-center" >
     <button class="btn btn-primary btn-lg">
-        <img class="delete" width='28px' src="{{asset('/images/icon-update.png')}}"/>
+        <i class="bi bi-pencil-square"></i>
     </button>
 </div>
 {{ form_end(form) }}
