--- a/templates/client/modal/modal.html.twig
+++ b/templates/client/modal/modal.html.twig
@@ -36,6 +36,7 @@
                 <div class="card-body  mt-5 mb-5">
                   <p class="card-text"><strong>Marque : </strong>{{client.appareil.marque}}</p>
                   <p class="card-text"><strong>Modele : </strong>{{client.appareil.modele}}</p>
+                  <p class="card-text"><strong>Mot de passe : </strong>{{client.appareil.mdp}}</p>
                   <p class="card-text"><strong>Numéro de serie : </strong>{{client.appareil.ns}}</p>
                   <p class="card-text"><strong>Chargeur : </strong>
                     {% if client.appareil.chargeur == 1 %}
@@ -60,7 +61,7 @@
                     {% if client.appareil.editeur.etat.statut is defined %}
                     
                       <p class="center"><span class="badge change-etat modal-statut"  id='change-statut{{client.id}}' style="font-size:16px">{{ client.appareil.editeur.etat.statut}}</span></p>
-                      <p class="card-text change-date"><b>Dérniere modificaion : </b>{{ client.appareil.editeur.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr')}}</p>
+                      <p class="card-text change-date"><b>Dérniere modificaion : </b><span class="edit-date">{{ client.appareil.editeur.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr')}}</span></p>
                       <p class="card-text change-user"><b>Par : </b>{{client.appareil.editeur.user.login}}</p>
                     {% endif %}
                     {{include('client/etat/etat_modal.html.twig') }}
