--- a/templates/emails/rdv/mail_rdv_reception.html.twig
+++ b/templates/emails/rdv/mail_rdv_reception.html.twig
@@ -1,4 +1,4 @@
-<p> Bonjour {{nom}} {{prenom}}, </p>
+<p> Bonjour {{nom|upper}} {{prenom}}, </p>
 <p>
     Nous accusons réception de votre demande de rendez-vous à la date suivante {{date|date('D d M Y H:i')|format_datetime('long','short',locale='fr')}}.
 </p>
@@ -8,8 +8,5 @@
 <p>
     Si vous souhaitez annuler ou modifier cette intervention merci de vous rendre sur ce  {% include 'emails/layout/link.html.twig' %} lien</a> ou nous contacter le plus rapidement possible au 01.34.15.52.32
 </p>
-<h3> Rappel de votre demande </h3>
-<p>{{objet}}</p>
-<p>{{message}}</p>
     
 {% include 'emails/layout/footer.html.twig' %}
