make ajax in pages rdv

--- a/templates/appel/index.html.twig
+++ b/templates/appel/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}À Rappeler{% endblock %}
 {% block body %}
 {% include 'layout/navbar.html.twig' %}
-    <div class="container">
+    <div class="container mb-3">
             <div class="row mt-5" >
                 <div class="col">
                     <h1>À Rappeler</h1>
