--- a/templates/appel/index.html.twig
+++ b/templates/appel/index.html.twig
@@ -26,7 +26,7 @@
                                     {{  appel.date|date('d M Y H:i')|format_datetime('medium','short',locale='fr') }}
                                         <div class="right"> {{ include('appel/_delete_form.html.twig') }} </div>
                                         <a class="btn btn-secondary right mr-1" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  ><img class="edit" width='20px' src="{{asset('./images/icon-edit.png')}}"/></a>
-                                        <div class="right"> {{ include('appel/_dont_reply_form.html.twig') }}  </div>
+                                        <div class="right btn-noreply"> {{ include('appel/_dont_reply_form.html.twig') }}  </div>
                                     </div>
                                 </div>
                             </div>
@@ -61,6 +61,7 @@
                                     <a class="btn btn-secondary right mr-1" href="{{ path('app_appel_edit', {'id': appel.id}) }}"  >
                                         <img class="edit" width='20px' src="{{asset('./images/icon-edit.png')}}"/>
                                     </a>
+                                    <div class="right btn-noreply collapse"> {{ include('appel/_dont_reply_form.html.twig') }}  </div>
                                     </div>
                                 </div>
                             </div>
