resolved prblm of ajax call

--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -20,7 +20,7 @@
           <a class="nav-link" aria-current="page" href="{{ path('app_appel_index') }}">Rappel</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{{ path('app_rdv_index') }}">Rdv</a>
+          <a class="nav-link" aria-current="page" href="{{ path('app_rdv_index') }}">Rendez-vous</a>
         </li>
       </ul>
       <ul class="navbar-nav  d-flex" style="--bs-scroll-height: 100px;">
