--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -26,12 +26,12 @@
       <ul class="navbar-nav  d-flex" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
         {% if app.user %}
-          <a class="nav-link" href="{{ path('user_show', {'id':  app.user.id} )}}"><img src="{{ asset('./images/icon-user.png') }}" width="30"/></a>
+          <a class="nav-link"  style="font-size:25px"  href="{{ path('user_show', {'id':  app.user.id} )}}"><i class="bi bi-person-circle"></i></a>
         {% endif %}
         </li>
         {% if app.user %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_logout')}}"><img src="{{ asset('./images/layout/icon-deconnexion.png') }}" width="28"/></a>
+            <a class="nav-link" style="font-size:25px" href="{{ path('app_logout')}}"><i class="bi bi-box-arrow-right"></i></a>
           </li>
         {% endif %}
       {#<li class="nav-item">
