--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}New Client{% endblock %}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/axentix@1.3.3/dist/css/axentix.min.css">
+    {#{{ encore_entry_link_tags('app') }}#}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   	<link rel="icon" type="image/png" sizes="16x16" href="{{ asset('./images/azerty.jpg') }}">
+{% endblock %}
+{% block title %}Nouveau Client{% endblock %}
 
 {% block body %}
 {% include 'layout/navbar.html.twig' %}
