--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
             <script type="text/javascript" src='{{ asset('js/public/loaderCall.js') }}'></script>
             <script type="text/javascript" src='{{ asset('js/public/loader.js') }}'></script>
             <script type="text/javascript" src='{{ asset('js/interne/alert.js') }}'></script>
-            <script type="text/javascript" src='{{ asset('js/interne/filtreMonth.js') }}'></script>
+            <script type="text/javascript" src='{{ asset('js/interne/filtre.js') }}'></script>
         {% endblock %}
     </head>
     <body class='body'>
