make link previous

--- a/templates/depot/condition.html.twig
+++ b/templates/depot/condition.html.twig
@@ -19,7 +19,7 @@
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                         <p>  Nous sommes désolés que votre appareil ne fonctionne pas correctement. 
-                        Chez AZERTY Solution Informatique, le devis est gratuit seulement si votre appareil est réparé dans nos locaux. Dans le cas contraire le devis vous sera facturé à 30 €. 
+                        Chez AZERTY Solution Informatique, la pris en charge de votre appareil est de 30 €, ce montant est déduit de votre facture finale si vous décidez d'effectuer le réparation de votre appareil au sein de nos locaux.
                         </p>
                         
                         <p>Pendant la maintenance de votre appareil :</p>
