try to resolved prblm server

--- a/templates/emails/layout/footer.html.twig
+++ b/templates/emails/layout/footer.html.twig
@@ -11,5 +11,8 @@
     38 rue de la station 95130, Franconville
 </p>
 <p>
-    Appelez-nous au 01 34 15 52 32 ou envoyer nous un message sur  <a href="https://api.whatsapp.com/send?phone=33661699422">  <img src="cid:whatsapp"  width="20px"></a>
+    <img src="cid:whatsapp"  width="20px"></a> <span style="fontsize:20px">+33661699422</span>
+</p>
+<p>
+    Appelez-nous au 01 34 15 52 32 ou envoyer nous un message sur  <a href="https://api.whatsapp.com/send?phone=33661699422">  <img src="cid:whatsapp"  width="30px"></a>
 </p>
