--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -6,9 +6,9 @@
     {% include 'layout/navbar.html.twig' %}
     <div class="container-fluid mb-100">
         {% if is_granted('ROLE_ADMIN') %}
-            <a  href="{{ path('user_index') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
+            <a  href="{{ path('user_index') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
         {% else %}
-            <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('../images/retour.png')}}"/> </a>
+            <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('./images/retour.png')}}"/> </a>
         {% endif %}
         <h1 style="margin-top: 45px !important;">Profil</h1>
         <div class="card" style="width: 45%; margin:auto; padding : 30px;">
